# automatica

./: README.md
install/cable_detection_picking/share/cable_detection_picking/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dual_arm_panda_moveit_config/share/dual_arm_panda_moveit_config/: package.sh
install/moveit2_tutorials/lib/moveit2_tutorials/: collision_scene_example  kinematics_cost_function_tutorial  minimal_mtc_tutorial  motion_planning_api_tutorial  motion_planning_pipeline_tutorial  move_group_interface_tutorial  moveit_cpp_tutorial  mtc_tutorial  ompl_constrained_planning  parallel_planning_example  pilz_move_group  pilz_mtc  pilz_sequence  planning_scene_ros_api_tutorial  planning_scene_tutorial  pose_tracking_tutorial  robot_model_and_robot_state_tutorial  trajectory_cache_demo
install/moveit2_tutorials/share/moveit2_tutorials/: package.sh  package.xml
install/moveit_resources/share/moveit_resources/: local_setup.sh  package.sh  package.xml
install/moveit_resources_fanuc_description/share/moveit_resources_fanuc_description/: local_setup.sh  package.sh
install/moveit_resources_fanuc_moveit_config/share/moveit_resources_fanuc_moveit_config/: package.sh
install/moveit_resources_panda_camera_description/share/moveit_resources_panda_camera_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_resources_panda_camera_moveit_config/share/moveit_resources_panda_camera_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: package.sh
install/moveit_resources_panda_moveit_config/share/moveit_resources_panda_moveit_config/: local_setup.sh  package.sh
install/moveit_resources_pr2_description/share/moveit_resources_pr2_description/: local_setup.sh  package.sh
install/moveit_task_constructor_capabilities/share/moveit_task_constructor_capabilities/: package.sh
install/moveit_task_constructor_core/share/moveit_task_constructor_core/: package.sh
install/moveit_task_constructor_demo/lib/moveit_task_constructor_demo/: alternative_path_costs  cartesian  fallbacks_move_to  ik_clearance_cost  modular  pick_place_demo
install/moveit_task_constructor_demo/share/moveit_task_constructor_demo/: local_setup.sh  package.sh
install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: local_setup.sh  package.sh
install/moveit_task_constructor_visualization/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
install/moveit_task_constructor_visualization/share/moveit_task_constructor_visualization/: package.sh
install/panda_moveit_cpp/lib/panda_moveit_cpp/: moveit_cpp_tutorial
install/panda_moveit_cpp/share/panda_moveit_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/panda_moveit_python/lib/panda_moveit_python/: motion_planning_python_api_tutorial
install/panda_moveit_python/share/panda_moveit_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ridgeback_description/share/ridgeback_description/: package.bash  package.zsh
install/robotiq_controllers/share/robotiq_controllers/: package.sh
install/robotiq_description/share/robotiq_description/: package.sh
install/robotiq_driver/share/robotiq_driver/: package.sh
install/robotiq_hardware_tests/share/robotiq_hardware_tests/: local_setup.sh  package.sh
install/rviz_marker_tools/share/rviz_marker_tools/: package.sh
install/serial/share/serial/: local_setup.sh  package.sh
install/simple_moveit_app/lib/simple_moveit_app/: simple_moveit_app
install/simple_moveit_app/share/simple_moveit_app/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/universal_robots_ur10e/lib/universal_robots_ur10e/: scene_subscriber
install/universal_robots_ur10e/share/universal_robots_ur10e/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/universal_robots_ur10e/share/universal_robots_ur10e/config/: joint_limits.yaml  ur.srdf.xacro  ur.urdf.xacro  ur_macro.srdf.xacro  ur_macro.xacro  ur_moveit.rviz
install/universal_robots_ur10e/share/universal_robots_ur10e/launch/: ur_moveit.launch.py
install/ur_moveit_cpp/lib/ur_moveit_cpp/: moveit_cpp_tutorial
log/: latest_build
src/: .gitignore  README.md  frames_2025-04-29_22.40.32.gv
src/cable_detection_picking/: CMakeLists.txt  _3_estimation_actuation.py  calculate_tf.py  config.py  convert_to_base_frame.py  convert_to_base_frame_panda.py  panda_joint_states_subscriber_udp.py  requirements.txt  setup.cfg  setup.py  show_transformation_matrix.py
src/cable_detection_picking/cable_pipeline/: run_pipeline_server.py
src/cable_detection_picking/helpers/: actuation.py  bota_ethercat_interface.py  debugging.py  estimation.py  segmentation.py
src/cable_detection_picking/resource/: cable_detection_picking
src/cable_detection_picking/sam2/: _2_segmentation_SAM21.py  est_seg_sam21.py  test.py
src/cable_detection_picking/script/: listener.py  parse_interpolater.py  traj copy.txt  traj.txt
src/panda_moveit_cpp /: CMakeLists.txt  README.md
src/panda_moveit_cpp /src/: moveit_cpp_tutorial.cpp
src/panda_moveit_python/: README.md  setup.cfg  setup.py
src/panda_moveit_python/config/: motion_planning_python_api_tutorial.yaml
src/panda_moveit_python/launch/: motion_planning_python_api_tutorial.launch.py
src/panda_moveit_python/panda_moveit_python/: motion_planning_python_api_tutorial.py
src/simple_moveit_app/: README.md  setup.cfg  setup.py
src/traj/: add_grpper_states.py  back_traj.txt  back_traj_with_gripper.txt  grasp_traj.txt  grasp_traj_with_gripper.txt  place_traj.txt  place_traj_with_gripper.txt  pre_grasp_traj.txt  pre_grasp_traj_with_gripper.txt
src/ur_moveit_cpp/: CMakeLists.txt  README.md  package.xml
src/ur_moveit_cpp/launch/: moveit_cpp_tutorial.launch.py
src/ur_moveit_cpp/src/: moveit_cpp_tutorial.cpp
(+274 files in other folders)
