<?xml version="1.0"?>
<package format="3">
  <name>ur_moveit_cpp</name>
  <version>0.0.1</version>
  <description>Modified MoveIt cpp interface for UR robots.</description>

  <maintainer email="go34beq@mytum.de">Tailai Cheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>ompl</exec_depend>
  <depend>rclcpp</depend>
  <depend>moveit_common</depend>
  <depend>boost</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>graph_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
