<?xml version="1.0"?>
<package format="3">
  <name>universal_robots_ur10e</name>
  <version>0.1.0</version>
  <description>A custom package for launching a UR10e robot in RViz including MoveIt2. Connects to the real robot and can control it via the external_control URCap. Also subscribes to the /planning_scene topic for individual scenes.</description>

  <maintainer email="florian.pachler@tum.de">florian</maintainer>
  <license>Apache License 2.0</license>

  <!-- Added by maintainer -->
  <!-- <exec_depend>ros2_control</exec_depend>-->
  <exec_depend>moveit_ros_control_interface</exec_depend>
  
  <!-- The following packages were added according to the package.xml's from ttps://github.com/UniversalRobots/Universal_Robots_ROS2_Driver/tree/main -->
  <!-- From UR MoveIt Config -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <!--<exec_depend>warehouse_ros_sqlite</exec_depend>-->
  <exec_depend>xacro</exec_depend>

  <!-- From UR Driver -->
  <exec_depend>backward_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>pose_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>socat</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- From UR Control -->
  <exec_depend>angles</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>generate_parameter_library</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- From UR Calibration -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ur_client_library</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <!-- From UR -->
  <exec_depend>ur_calibration</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <!-- From UR Dashboard Msgs -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <exec_depend>eigen</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

